--- a/src/css/toolbar.css
+++ b/src/css/toolbar.css
@@ -2,12 +2,12 @@
 	background-color: var(--primary);
 	color: white;
 	height: 32px;
-	padding: 16px;
+	padding: 16px
 }
-#header > div > input[type='text'] {
+#header > input[type='text'] {
 	color: #013;
 	background-color: #fff8;
-	height: 100%;
+	height: 32px;
 	border: none;
 	border-radius: 16px;
 }
